--- a/Dictionary/Dictionary.csproj
+++ b/Dictionary/Dictionary.csproj
@@ -55,9 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Properties\Question.xaml.cs" />
-    <Compile Include="Question.xaml.cs">
-      <DependentUpon>Question.xaml</DependentUpon>
+    <Compile Include="second.xaml.cs">
+      <DependentUpon>second.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -71,7 +70,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Question.xaml">
+    <Page Include="second.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
